examples/errors/missing_relation_semicolon.fil
diagram component;

type Database = Rectangle [color="blue"];
type Service = Rectangle [color="green"];

// Valid component definitions
frontend: Service;
backend: Service;
database: Database;

// Valid relation with semicolon
frontend -> backend;

// This relation is missing a semicolon - should trigger parse error
backend -> database

// This line should cause the parser to fail due to missing semicolon above
database -> frontend;
